@@ -18,6 +18,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15828: Restore support for C extensions in imp.load_module().
+
 - Issue #15340: Fix importing the random module when /dev/urandom cannot
   be opened.  This was a regression caused by the hash randomization patch.
 
